--- a/src/components/StartScreen.module.css
+++ b/src/components/StartScreen.module.css
@@ -63,9 +63,8 @@
     display: block;
     text-align: right;
     font-size: 45px;
-    position: absolute;
-    top: -55px;
-    right: 40px;
+    position: relative;
+    line-height: 30px;
 }
 
 .startScreenTitle{
@@ -76,4 +75,5 @@
     line-height: 76px;
     margin-bottom: 35px;
     color: white;
+    display:inline-block;
 }
